--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  background: rgb(1, 1, 37);
+  color: #75eeb2;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+}
+
 .App {
   text-align: center;
 }
