--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100&display=swap');
+
 body {
   background: rgb(1, 1, 37);
   color: #75eeb2;
