Change book styles

--- a/src/Components/Search/style.css
+++ b/src/Components/Search/style.css
@@ -4,7 +4,7 @@ ul {
 
 .search-box input {
   padding: 0.5rem 1rem;
-  margin: 1rem 0 1.3rem 0;
+  margin: 3rem 0 1.3rem 0;
   border: none;
 }
 
@@ -16,7 +16,6 @@ ul {
   width: 13%;
   border-radius: 0.3rem;
   padding: 0;
-  background-color: transparent;
 }
 
 .genres button {
@@ -24,10 +23,11 @@ ul {
   border-radius: 0.3rem;
   padding: 0.4rem 0.4rem;
   background: transparent;
+  text-transform: capitalize;
   color: plum;
   line-height: 3rem;
   font-family: 'Nunito', sans-serif;  
-  font-size: 0.9rem;
+  font-size: 1.1rem;
   outline: none;
 }
 
@@ -45,55 +45,6 @@ ul {
   margin: 0 0.3rem 0.3rem 0;
 }
 
-.books {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  margin: 2rem 1rem 2rem 8.56rem;
-}
-
-.books ul {
-  border-radius: 0.5rem;
-  background: linear-gradient(#a088f340, rgba(0, 0, 0, 0));
-}
-
-.books li {
-  display: flex;
-  text-align: left;
-}
-
-.books img {
-  border-radius: 0.5rem;
-  margin-right: 1.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  transition: all 0.2s;
-  transform: translate(0, -1.5rem);
-  animation: zoomin 0.5s;
-}
-.books img:hover {
-  transform: translate(0, -1.3rem) scale(1.1);
-}
-
-.book-title, .book-author {
-  width: 14rem;
-  font-weight: bold; 
-  overflow: hidden;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-
-.book-author {
-  font-weight: normal;
-}
-
-.book-categorie {
-  background-color: #d0b4e882;
-  padding: 0.4rem 1rem;
-  width: min-content;
-  border-radius: 5rem;
-  font-size: 0.8rem;
-}
-
 @media (max-width: 1024px) {
   .genres {
     width: 12%;
@@ -109,14 +60,7 @@ ul {
     width: 100%;
     padding: 0 1.7rem;
 }
-.genres button {
-  line-height: 1rem;
-}
-  .books {
-    display: inline-block;
-    margin: 1.5rem 0;
-  }
-  .book-title, .book-author {
-    width: 12rem;
+  .genres button {
+    line-height: 1rem;
   }
 }
