--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,40 @@
 @import url('https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;1,100&display=swap');
 
+:root {
+  --bg-color: #010125;
+  --primary-color: #75eeb2;
+  --secondary-color: plum;
+  --card-bg-color: #a088f340;
+}
+
 body {
-  background: rgb(1, 1, 37);
-  color: #75eeb2;
+  background: var(--bg-color);
+  color: var(--primary-color);
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+    'Ubuntu', sans-serif;
 }
 
 .App {
   text-align: center;
+}
+
+.github {
+  position: fixed;
+  bottom: 1.5rem;
+  left: 2rem;
+  width: 2rem;
+  opacity: 0.4;
+}
+
+.github:hover {
+  opacity: 0.5;
+  transition: 0.9s;
+}
+
+@media (max-width: 768px) {
+  .github {
+    width: 1.8rem;
+    left: 0.7rem;
+  }
 }
