Change breaking points

--- a/src/Components/Books/style.css
+++ b/src/Components/Books/style.css
@@ -2,12 +2,12 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
-  margin: 2rem 1rem 2rem 8.56rem;
+  margin: 2rem 1rem 2rem 10rem;
 }
 
 .books ul {
   border-radius: 0.5rem;
-  background: linear-gradient(#a088f340, rgba(0, 0, 0, 0));
+  background: linear-gradient(var(--card-bg-color), rgba(0, 0, 0, 0));
 }
 
 .books li {
@@ -18,7 +18,6 @@
 .books img {
   border-radius: 0.5rem;
   margin-right: 1.5rem;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.2s;
   transform: translate(0, -1.5rem);
   animation: zoomin 0.5s;
@@ -40,10 +39,14 @@
 }
 
 .book-categorie {
-  background-color: #d0b4e882;
+  background-color: var(--secondary-color);
+  opacity: 0.7;
   padding: 0.4rem 1rem;
-  width: min-content;
+  width: fit-content;
+  overflow: hidden;
+  white-space: nowrap;
   border-radius: 5rem;
+  color: var(--bg-color);
   font-size: 0.8rem;
 }
 
