Add color variables

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,8 @@
   --primary-color: #75eeb2;
   --secondary-color: plum;
   --card-bg-color: #a088f340;
+  --card-bg-color2: #7ef7ce57;
+  --card-bg-color3: #ed7ef757;
 }
 
 body {
