--- a/src/Components/Search/style.css
+++ b/src/Components/Search/style.css
@@ -6,6 +6,9 @@ ul {
   padding: 0.5rem 1rem;
   margin: 3rem 0 1.3rem 0;
   border: none;
+  color: var(--secondary-color);
+  font-family: 'Nunito', sans-serif;  
+  font-weight: bold;
 }
 
 .genres {
