--- a/src/Components/Books/style.css
+++ b/src/Components/Books/style.css
@@ -32,6 +32,10 @@
   transform: translate(0, -1.3rem) scale(1.1);
 }
 
+.books p:nth-child(3) {
+  font-size: 0.9rem;
+}
+
 .book-title, .book-author {
   width: 14rem;
   font-weight: bold; 
