--- a/src/Components/Categories/style.css
+++ b/src/Components/Categories/style.css
@@ -32,3 +32,23 @@
   vertical-align: middle;
   margin: 0 0.5rem 0.3rem 0;
 }
+
+@media (max-width: 900px) {
+  .genres button {
+    font-size: 0.9rem;
+  }
+}
+
+@media (max-width: 768px) {
+  .genres {
+    display: flex;
+    flex-direction: row;
+    position: initial;
+    justify-content: space-evenly;
+    width: 100%;
+    padding: 0;
+}
+  .genres button {
+    line-height: 1rem;
+  }
+}
