Change color variable

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 :root {
   --bg-color: #010125;
   --primary-color: #75eeb2;
-  --secondary-color: plum;
+  --secondary-color: #dda0dd;
   --card-bg-color: #a088f340;
   --card-bg-color2: #7ef7ce57;
   --card-bg-color3: #ed7ef757;
@@ -27,6 +27,7 @@ ul {
 
 .App aside {
   display: flex;
+  left: 2rem;
 }
 
 .github {
