Add color variables

--- a/src/Components/Modal/style.css
+++ b/src/Components/Modal/style.css
@@ -21,15 +21,17 @@
 .modal-window > div {
   width: fit-content;
   position: absolute;
-  top: 50%;
+  top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 2rem;
-  background: #f7f3f3;
+  background: var(--bg-color);
 }
 
 .modal-window img {
   width: 2rem;
+  vertical-align: bottom;
+  margin-left: 0.4rem;
 }
 
 .modal-close {
@@ -43,15 +45,8 @@
   text-decoration: none;
 }
 .modal-close:hover {
-  color: var(--bg-color);
+  color: var(--primary-color);
   transition: 0.9s;
-}
-
-.container {
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
 }
 
 .modal-window > div {
@@ -59,20 +54,22 @@
 }
 
 .modal-window div:not(:last-of-type) {
-  margin-bottom: 15px;
+  margin-bottom: 1rem;
 }
 
-small {
-  color: lightgray;
-}
-
-.btn {
-  background-color: white;
-  padding: 1em 1.5em;
+.randomize-btn {
+  position: fixed;
+  border: none;
+  margin: 0.3rem 0.4rem ;
+  background: var(--primary-color);
+  color: var(--secondary-color);
   border-radius: 1rem;
+  padding: 0.5rem 1rem;
+  font-family: 'Nunito', sans-serif; 
+  outline: none;
   text-decoration: none;
 }
-
-.btn i {
-  padding-right: 0.3em;
+.randomize-btn:hover {
+  opacity: 0.9;
+  transition: 0.8s;
 }
