--- a/src/Components/Modal/style.css
+++ b/src/Components/Modal/style.css
@@ -1,3 +1,21 @@
+.randomize-btn {
+  position: fixed;
+  border: none;
+  margin: 0.3rem 0.4rem ;
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  border-radius: 2rem;
+  padding: 0.5rem 1rem;
+  font-family: 'Nunito', sans-serif; 
+  outline: none;
+  text-decoration: none;
+}
+.randomize-btn:hover {
+  opacity: 0.9;
+  transition: 0.8s;
+  box-shadow: 0px 0px 8px var(--primary-color);
+}
+
 .modal-window {
   position: fixed;
   background: linear-gradient(var(--card-bg-color2), rgba(0, 0, 0, 0));
@@ -35,7 +53,7 @@
 }
 
 .modal-close {
-  color: #aaa;
+  color: var(--primary-color);
   line-height: 3rem;
   position: absolute;
   right: 0;
@@ -45,31 +63,14 @@
   text-decoration: none;
 }
 .modal-close:hover {
-  color: var(--primary-color);
+  color: #aaa;
   transition: 0.9s;
 }
 
 .modal-window > div {
-  border-radius: 1rem;
+  border-radius: 0.7rem;
 }
 
 .modal-window div:not(:last-of-type) {
   margin-bottom: 1rem;
-}
-
-.randomize-btn {
-  position: fixed;
-  border: none;
-  margin: 0.3rem 0.4rem ;
-  background: var(--primary-color);
-  color: var(--secondary-color);
-  border-radius: 1rem;
-  padding: 0.5rem 1rem;
-  font-family: 'Nunito', sans-serif; 
-  outline: none;
-  text-decoration: none;
-}
-.randomize-btn:hover {
-  opacity: 0.9;
-  transition: 0.8s;
 }
