--- a/src/Components/Modal/style.css
+++ b/src/Components/Modal/style.css
@@ -46,10 +46,15 @@
   background: var(--bg-color);
 }
 
-.modal-window img {
+.modal-window p img {
   width: 2rem;
   vertical-align: bottom;
   margin-left: 0.4rem;
+}
+
+.modal-window img {
+  width: 4rem;
+  border-radius: 0.2rem;
 }
 
 .modal-close {
@@ -73,4 +78,10 @@
 
 .modal-window div:not(:last-of-type) {
   margin-bottom: 1rem;
+}
+
+@media (max-width: 768px) {
+  .randomize-btn {
+    position: initial;
+  }
 }
