Add search input width

--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ ul {
   transition: 0.9s;
 }
 .search-box input {
+  width: 15%;
   padding: 0.5rem 1rem;
   margin: 3rem 0 1.3rem 0;
   border: none;
@@ -54,6 +55,9 @@ ul {
 @media (max-width: 768px) {
   .App aside {
     display: inline-block;
+  }
+  .search-box input {
+    width: 40%;
   }
   .github {
     width: 1.8rem;
