--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,11 @@ ul {
   list-style: none;
 }
 
+::placeholder {
+  color: var(--bg-color);
+  opacity: 0.7;
+}
+
 .App {
   text-align: center;
 }
@@ -47,6 +52,7 @@ ul {
   padding: 0.5rem 1rem;
   margin: 3rem 0 1.3rem 0;
   border: none;
+  border-radius: 0.1rem;
   color: var(--secondary-color);
   font-family: 'Nunito', sans-serif;  
   font-weight: bold;
